ExampleErrors/src/com/jake/example/errors/fields/IFoo.java
package com.jake.example.errors.fields;

public interface IFoo {

}
